Removed old heading field and replaced with new one (WYSIWYG)

--- a/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blockmarketmap.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blockmarketmap.default.yml
@@ -16,6 +16,7 @@ dependencies:
     - field_group
     - image
     - paragraphs
+    - text
 third_party_settings:
   field_group:
     group_styles:
@@ -51,12 +52,12 @@ content:
     third_party_settings: {  }
     type: string_textfield
   field_heading:
-    weight: 3
+    weight: 8
     settings:
-      size: 60
+      rows: 5
       placeholder: ''
     third_party_settings: {  }
-    type: string_textfield
+    type: text_textarea
   field_image:
     weight: 6
     settings:
