--- a/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.personas.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.personas.default.yml
@@ -35,12 +35,12 @@ bundle: personas
 mode: default
 content:
   field_heading:
-    weight: 0
+    weight: 7
     settings:
-      size: 60
+      rows: 5
       placeholder: ''
     third_party_settings: {  }
-    type: string_textfield
+    type: text_textarea
   field_image:
     weight: 5
     settings:
