--- a/deploy/var/drupal-config/sync/field.field.paragraph.blockpagenotfound.field_heading.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.blockpagenotfound.field_heading.yml
@@ -1,10 +1,12 @@
-uuid: 296dbfc7-e249-4169-933a-5689eaa4b0d6
+uuid: 497765bc-7227-42e7-aefb-60df285e1988
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.paragraph.field_heading
     - paragraphs.paragraphs_type.blockpagenotfound
+  module:
+    - text
 id: paragraph.blockpagenotfound.field_heading
 field_name: field_heading
 entity_type: paragraph
@@ -15,5 +17,11 @@ required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
-settings: {  }
-field_type: string
+settings:
+  allowed_formats:
+    basic_html: basic_html
+    bold_html: bold_html
+    restricted_html: restricted_html
+    full_html: full_html
+    plain_text: plain_text
+field_type: text_long
