--- a/deploy/var/drupal-config/sync/field.field.paragraph.slide.field_heading.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.slide.field_heading.yml
@@ -1,19 +1,27 @@
-uuid: a589beff-112a-439f-8f11-b1c8d94b5b19
+uuid: c115c78a-8e47-444a-a68d-e20c7ebaadd0
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.paragraph.field_heading
     - paragraphs.paragraphs_type.slide
+  module:
+    - text
 id: paragraph.slide.field_heading
 field_name: field_heading
 entity_type: paragraph
 bundle: slide
 label: Heading
 description: ''
-required: false
+required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
-settings: {  }
-field_type: string
+settings:
+  allowed_formats:
+    basic_html: basic_html
+    bold_html: bold_html
+    restricted_html: restricted_html
+    full_html: full_html
+    plain_text: plain_text
+field_type: text_long
