--- a/deploy/var/drupal-config/sync/field.field.paragraph.stat.field_heading.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.stat.field_heading.yml
@@ -1,10 +1,12 @@
-uuid: 0df50604-ab42-4441-b690-833b6fd9bbf0
+uuid: 1786c4e8-ad58-4ed5-a313-8a09c07b470b
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.paragraph.field_heading
     - paragraphs.paragraphs_type.stat
+  module:
+    - text
 id: paragraph.stat.field_heading
 field_name: field_heading
 entity_type: paragraph
@@ -15,5 +17,11 @@ required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
-settings: {  }
-field_type: string
+settings:
+  allowed_formats:
+    basic_html: basic_html
+    bold_html: bold_html
+    restricted_html: restricted_html
+    full_html: full_html
+    plain_text: plain_text
+field_type: text_long
