--- a/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blockherosecondary.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blockherosecondary.default.yml
@@ -57,12 +57,12 @@ content:
     third_party_settings: {  }
     type: color_field_widget_html5
   field_heading:
-    weight: 5
+    weight: 8
     settings:
-      size: 60
+      rows: 5
       placeholder: ''
     third_party_settings: {  }
-    type: string_textfield
+    type: text_textarea
   field_image:
     weight: 1
     settings:
