--- a/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blockhowtoadvertise.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blockhowtoadvertise.default.yml
@@ -11,6 +11,7 @@ dependencies:
   module:
     - field_group
     - paragraphs
+    - text
 third_party_settings:
   field_group:
     group_styles:
@@ -44,12 +45,12 @@ bundle: blockhowtoadvertise
 mode: default
 content:
   field_heading:
-    weight: 1
+    weight: 5
     settings:
-      size: 60
+      rows: 5
       placeholder: ''
     third_party_settings: {  }
-    type: string_textfield
+    type: text_textarea
   field_link:
     type: entity_reference_paragraphs
     weight: 3
