--- a/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blockimagewithcontent.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blockimagewithcontent.default.yml
@@ -61,12 +61,12 @@ content:
     third_party_settings: {  }
     type: boolean_checkbox
   field_heading:
-    weight: 2
+    weight: 9
     settings:
-      size: 60
+      rows: 5
       placeholder: ''
     third_party_settings: {  }
-    type: string_textfield
+    type: text_textarea
   field_image:
     weight: 6
     settings:
