--- a/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blocklatest.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blocklatest.default.yml
@@ -11,6 +11,7 @@ dependencies:
   module:
     - field_group
     - paragraphs
+    - text
 third_party_settings:
   field_group:
     group_styles:
@@ -51,12 +52,12 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
   field_heading:
-    weight: 3
+    weight: 5
     settings:
-      size: 60
+      rows: 5
       placeholder: ''
     third_party_settings: {  }
-    type: string_textfield
+    type: text_textarea
   field_link:
     weight: 3
     settings:
