--- a/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blockmapsecondary.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blockmapsecondary.default.yml
@@ -52,12 +52,12 @@ bundle: blockmapsecondary
 mode: default
 content:
   field_heading:
-    weight: 5
+    weight: 9
     settings:
-      size: 60
+      rows: 5
       placeholder: ''
     third_party_settings: {  }
-    type: string_textfield
+    type: text_textarea
   field_image:
     weight: 5
     settings:
