--- a/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blockpagenotfound.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blockpagenotfound.default.yml
@@ -48,12 +48,12 @@ bundle: blockpagenotfound
 mode: default
 content:
   field_heading:
-    weight: 6
+    weight: 9
     settings:
-      size: 60
+      rows: 5
       placeholder: ''
     third_party_settings: {  }
-    type: string_textfield
+    type: text_textarea
   field_image:
     weight: 4
     settings:
