--- a/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blocksmallheading.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blocksmallheading.default.yml
@@ -9,6 +9,7 @@ dependencies:
   module:
     - field_group
     - paragraphs
+    - text
 third_party_settings:
   field_group:
     group_styles:
@@ -29,12 +30,12 @@ bundle: blocksmallheading
 mode: default
 content:
   field_heading:
-    weight: 2
+    weight: 4
     settings:
-      size: 60
+      rows: 5
       placeholder: ''
     third_party_settings: {  }
-    type: string_textfield
+    type: text_textarea
   field_styles:
     weight: 1
     settings:
