--- a/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blocksmallinfo.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blocksmallinfo.default.yml
@@ -45,12 +45,12 @@ bundle: blocksmallinfo
 mode: default
 content:
   field_heading:
-    weight: 4
+    weight: 6
     settings:
-      size: 60
+      rows: 5
       placeholder: ''
     third_party_settings: {  }
-    type: string_textfield
+    type: text_textarea
   field_link:
     weight: 2
     settings:
