--- a/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.program.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.program.default.yml
@@ -23,12 +23,12 @@ bundle: program
 mode: default
 content:
   field_heading:
-    weight: 1
+    weight: 8
     settings:
-      size: 60
+      rows: 5
       placeholder: ''
     third_party_settings: {  }
-    type: string_textfield
+    type: text_textarea
   field_image:
     weight: 0
     settings:
