--- a/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.slide.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.slide.default.yml
@@ -10,18 +10,19 @@ dependencies:
     - paragraphs.paragraphs_type.slide
   module:
     - image
+    - text
 id: paragraph.slide.default
 targetEntityType: paragraph
 bundle: slide
 mode: default
 content:
   field_heading:
-    weight: 0
+    weight: 4
     settings:
-      size: 60
+      rows: 5
       placeholder: ''
     third_party_settings: {  }
-    type: string_textfield
+    type: text_textarea
   field_image:
     weight: 1
     settings:
