--- a/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.stepmap.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.stepmap.default.yml
@@ -15,12 +15,12 @@ bundle: stepmap
 mode: default
 content:
   field_heading:
-    weight: 1
+    weight: 4
     settings:
-      size: 60
+      rows: 5
       placeholder: ''
     third_party_settings: {  }
-    type: string_textfield
+    type: text_textarea
   field_label:
     weight: 0
     settings:
