--- a/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.steppurchase.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.steppurchase.default.yml
@@ -18,12 +18,12 @@ bundle: steppurchase
 mode: default
 content:
   field_heading:
-    weight: 0
+    weight: 5
     settings:
-      size: 60
+      rows: 5
       placeholder: ''
     third_party_settings: {  }
-    type: string_textfield
+    type: text_textarea
   field_image:
     weight: 2
     settings:
