--- a/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.stories.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.stories.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.stories.field_heading
+    - field.field.paragraph.stories.field_heading_temp
     - field.field.paragraph.stories.field_image
     - field.field.paragraph.stories.field_paragraph
     - field.field.paragraph.stories.field_theme
@@ -18,12 +19,19 @@ bundle: stories
 mode: default
 content:
   field_heading:
-    weight: 0
+    weight: 5
     settings:
-      size: 60
+      rows: 5
       placeholder: ''
     third_party_settings: {  }
-    type: string_textfield
+    type: text_textarea
+  field_heading_temp:
+    weight: 4
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textarea
   field_image:
     weight: 2
     settings:
