--- a/deploy/var/drupal-config/sync/core.entity_view_display.node.article.rss.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.node.article.rss.yml
@@ -21,7 +21,16 @@ content:
   links:
     weight: 100
 hidden:
+  field_blocks: true
+  field_category: true
   field_content: true
+  field_document_type: true
   field_excerpt: true
+  field_header_theme: true
   field_image: true
+  field_links: true
+  field_market: true
+  field_platform: true
   field_read_time: true
+  field_subheading: true
+  field_theme: true
