--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockherosecondary.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockherosecondary.default.yml
@@ -31,12 +31,11 @@ content:
     third_party_settings: {  }
     type: color_field_formatter_text
   field_heading:
-    weight: 4
+    weight: 9
     label: above
-    settings:
-      link_to_entity: false
+    settings: {  }
     third_party_settings: {  }
-    type: string
+    type: text_default
   field_image:
     weight: 1
     label: above
