--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockhowtoadvertise.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockhowtoadvertise.default.yml
@@ -10,18 +10,18 @@ dependencies:
     - paragraphs.paragraphs_type.blockhowtoadvertise
   module:
     - entity_reference_revisions
+    - text
 id: paragraph.blockhowtoadvertise.default
 targetEntityType: paragraph
 bundle: blockhowtoadvertise
 mode: default
 content:
   field_heading:
-    weight: 1
+    weight: 5
     label: above
-    settings:
-      link_to_entity: false
+    settings: {  }
     third_party_settings: {  }
-    type: string
+    type: text_default
   field_link:
     type: entity_reference_revisions_entity_view
     weight: 2
