--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockimagewithcontent.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockimagewithcontent.default.yml
@@ -38,12 +38,11 @@ content:
     third_party_settings: {  }
     type: boolean
   field_heading:
-    weight: 1
+    weight: 8
     label: above
-    settings:
-      link_to_entity: false
+    settings: {  }
     third_party_settings: {  }
-    type: string
+    type: text_default
   field_image:
     weight: 4
     label: above
