--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blocklatest.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blocklatest.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - paragraphs.paragraphs_type.blocklatest
   module:
     - entity_reference_revisions
+    - text
 id: paragraph.blocklatest.default
 targetEntityType: paragraph
 bundle: blocklatest
@@ -23,12 +24,11 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
   field_heading:
-    weight: 1
+    weight: 5
     label: above
-    settings:
-      link_to_entity: false
+    settings: {  }
     third_party_settings: {  }
-    type: string
+    type: text_default
   field_link:
     weight: 2
     label: above
