--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockmapsecondary.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockmapsecondary.default.yml
@@ -23,12 +23,11 @@ bundle: blockmapsecondary
 mode: default
 content:
   field_heading:
-    weight: 3
+    weight: 9
     label: above
-    settings:
-      link_to_entity: false
+    settings: {  }
     third_party_settings: {  }
-    type: string
+    type: text_default
   field_image:
     weight: 4
     label: above
