--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockmarketmap.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockmarketmap.default.yml
@@ -15,6 +15,7 @@ dependencies:
   module:
     - entity_reference_revisions
     - image
+    - text
 id: paragraph.blockmarketmap.default
 targetEntityType: paragraph
 bundle: blockmarketmap
@@ -35,12 +36,11 @@ content:
     third_party_settings: {  }
     type: string
   field_heading:
-    weight: 1
+    weight: 8
     label: above
-    settings:
-      link_to_entity: false
+    settings: {  }
     third_party_settings: {  }
-    type: string
+    type: text_default
   field_image:
     weight: 4
     label: above
