--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockmore.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockmore.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - paragraphs.paragraphs_type.blockmore
   module:
     - entity_reference_revisions
+    - text
 id: paragraph.blockmore.default
 targetEntityType: paragraph
 bundle: blockmore
@@ -23,12 +24,11 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
   field_heading:
-    weight: 1
+    weight: 7
     label: above
-    settings:
-      link_to_entity: false
+    settings: {  }
     third_party_settings: {  }
-    type: string
+    type: text_default
   field_links:
     type: entity_reference_revisions_entity_view
     weight: 4
