--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockpagenotfound.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockpagenotfound.default.yml
@@ -21,12 +21,11 @@ bundle: blockpagenotfound
 mode: default
 content:
   field_heading:
-    weight: 4
+    weight: 7
     label: above
-    settings:
-      link_to_entity: false
+    settings: {  }
     third_party_settings: {  }
-    type: string
+    type: text_default
   field_image:
     weight: 2
     label: above
