--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blocksmallinfo.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blocksmallinfo.default.yml
@@ -17,12 +17,11 @@ bundle: blocksmallinfo
 mode: default
 content:
   field_heading:
-    weight: 2
+    weight: 5
     label: above
-    settings:
-      link_to_entity: false
+    settings: {  }
     third_party_settings: {  }
-    type: string
+    type: text_default
   field_link:
     weight: 3
     label: above
