--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.program.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.program.default.yml
@@ -21,12 +21,11 @@ bundle: program
 mode: default
 content:
   field_heading:
-    weight: 1
+    weight: 10
     label: above
-    settings:
-      link_to_entity: false
+    settings: {  }
     third_party_settings: {  }
-    type: string
+    type: text_default
   field_image:
     weight: 0
     label: above
