--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.slide.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.slide.default.yml
@@ -11,18 +11,18 @@ dependencies:
   module:
     - image
     - options
+    - text
 id: paragraph.slide.default
 targetEntityType: paragraph
 bundle: slide
 mode: default
 content:
   field_heading:
-    weight: 0
+    weight: 4
     label: above
-    settings:
-      link_to_entity: false
+    settings: {  }
     third_party_settings: {  }
-    type: string
+    type: text_default
   field_image:
     weight: 1
     label: above
