--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.stat.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.stat.default.yml
@@ -15,12 +15,11 @@ bundle: stat
 mode: default
 content:
   field_heading:
-    weight: 0
+    weight: 4
     label: above
-    settings:
-      link_to_entity: false
+    settings: {  }
     third_party_settings: {  }
-    type: string
+    type: text_default
   field_paragraph:
     weight: 1
     label: above
