--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.statistic.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.statistic.default.yml
@@ -8,18 +8,18 @@ dependencies:
     - paragraphs.paragraphs_type.statistic
   module:
     - entity_reference_revisions
+    - text
 id: paragraph.statistic.default
 targetEntityType: paragraph
 bundle: statistic
 mode: default
 content:
   field_heading:
-    weight: 0
+    weight: 3
     label: above
-    settings:
-      link_to_entity: false
+    settings: {  }
     third_party_settings: {  }
-    type: string
+    type: text_default
   field_stats:
     weight: 1
     label: above
