--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.step.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.step.default.yml
@@ -16,12 +16,11 @@ bundle: step
 mode: default
 content:
   field_heading:
-    weight: 0
+    weight: 5
     label: above
-    settings:
-      link_to_entity: false
+    settings: {  }
     third_party_settings: {  }
-    type: string
+    type: text_default
   field_icon_list:
     weight: 3
     label: above
