--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.steppurchase.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.steppurchase.default.yml
@@ -18,12 +18,11 @@ bundle: steppurchase
 mode: default
 content:
   field_heading:
-    weight: 0
+    weight: 5
     label: above
-    settings:
-      link_to_entity: false
+    settings: {  }
     third_party_settings: {  }
-    type: string
+    type: text_default
   field_image:
     weight: 2
     label: above
