--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.stories.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.stories.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.stories.field_heading
+    - field.field.paragraph.stories.field_heading_temp
     - field.field.paragraph.stories.field_image
     - field.field.paragraph.stories.field_paragraph
     - field.field.paragraph.stories.field_theme
@@ -19,12 +20,17 @@ bundle: stories
 mode: default
 content:
   field_heading:
-    weight: 0
+    weight: 5
     label: above
-    settings:
-      link_to_entity: false
+    settings: {  }
     third_party_settings: {  }
-    type: string
+    type: text_default
+  field_heading_temp:
+    weight: 4
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: basic_string
   field_image:
     weight: 2
     label: above
