--- a/deploy/var/drupal-config/sync/field.field.paragraph.blockhowtoadvertise.field_heading.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.blockhowtoadvertise.field_heading.yml
@@ -1,19 +1,22 @@
-uuid: 1b696134-8460-482b-ab08-6fe58837a979
+uuid: 73a12c84-b7d4-47db-8648-b1b7ea91384d
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.paragraph.field_heading
     - paragraphs.paragraphs_type.blockhowtoadvertise
+  module:
+    - text
 id: paragraph.blockhowtoadvertise.field_heading
 field_name: field_heading
 entity_type: paragraph
 bundle: blockhowtoadvertise
 label: Heading
 description: ''
-required: true
-translatable: false
+required: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
-settings: {  }
-field_type: string
+settings:
+  allowed_formats: {  }
+field_type: text_long
