--- a/deploy/var/drupal-config/sync/field.field.paragraph.blocklatest.field_heading.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.blocklatest.field_heading.yml
@@ -1,10 +1,12 @@
-uuid: 1e9dc931-7080-4b45-bb95-1f3225e0d637
+uuid: 644c36fd-fef6-437b-9d63-4ad688f9c25a
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.paragraph.field_heading
     - paragraphs.paragraphs_type.blocklatest
+  module:
+    - text
 id: paragraph.blocklatest.field_heading
 field_name: field_heading
 entity_type: paragraph
@@ -15,5 +17,11 @@ required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
-settings: {  }
-field_type: string
+settings:
+  allowed_formats:
+    basic_html: basic_html
+    bold_html: bold_html
+    restricted_html: restricted_html
+    full_html: full_html
+    plain_text: plain_text
+field_type: text_long
