--- a/deploy/var/drupal-config/sync/field.field.paragraph.blockmore.field_heading.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.blockmore.field_heading.yml
@@ -1,10 +1,12 @@
-uuid: d149f7c6-df81-4ebe-8740-f2bcaeeb9e28
+uuid: b3169004-77e8-429c-9d7f-7b311be26a9d
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.paragraph.field_heading
     - paragraphs.paragraphs_type.blockmore
+  module:
+    - text
 id: paragraph.blockmore.field_heading
 field_name: field_heading
 entity_type: paragraph
@@ -15,5 +17,11 @@ required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
-settings: {  }
-field_type: string
+settings:
+  allowed_formats:
+    basic_html: basic_html
+    bold_html: bold_html
+    restricted_html: restricted_html
+    full_html: full_html
+    plain_text: plain_text
+field_type: text_long
