--- a/deploy/var/drupal-config/sync/field.field.paragraph.blocksmallheading.field_heading.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.blocksmallheading.field_heading.yml
@@ -1,10 +1,12 @@
-uuid: 8f899ea9-1a33-4d3b-a32a-fcff26c4868e
+uuid: 291931d8-291f-40dc-b578-6fcaa29635dc
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.paragraph.field_heading
     - paragraphs.paragraphs_type.blocksmallheading
+  module:
+    - text
 id: paragraph.blocksmallheading.field_heading
 field_name: field_heading
 entity_type: paragraph
@@ -15,5 +17,11 @@ required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
-settings: {  }
-field_type: string
+settings:
+  allowed_formats:
+    basic_html: basic_html
+    bold_html: bold_html
+    restricted_html: restricted_html
+    full_html: full_html
+    plain_text: plain_text
+field_type: text_long
