--- a/deploy/var/drupal-config/sync/field.field.paragraph.calltoaction.field_heading.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.calltoaction.field_heading.yml
@@ -1,10 +1,12 @@
-uuid: 1e0d0d5a-6e87-4726-8a71-4de0202b3152
+uuid: 3b2ea46a-882b-4ef5-ba09-05556d173d5e
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.paragraph.field_heading
     - paragraphs.paragraphs_type.calltoaction
+  module:
+    - text
 id: paragraph.calltoaction.field_heading
 field_name: field_heading
 entity_type: paragraph
@@ -15,5 +17,11 @@ required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
-settings: {  }
-field_type: string
+settings:
+  allowed_formats:
+    basic_html: basic_html
+    bold_html: bold_html
+    restricted_html: restricted_html
+    full_html: full_html
+    plain_text: plain_text
+field_type: text_long
