--- a/deploy/var/drupal-config/sync/field.field.paragraph.personas.field_heading.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.personas.field_heading.yml
@@ -1,10 +1,12 @@
-uuid: 0ca2a7ae-3b81-4aac-b15f-8e92db1bd50f
+uuid: c632f239-4b8d-47cf-926a-b8ab72bec9cb
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.paragraph.field_heading
     - paragraphs.paragraphs_type.personas
+  module:
+    - text
 id: paragraph.personas.field_heading
 field_name: field_heading
 entity_type: paragraph
@@ -15,5 +17,11 @@ required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
-settings: {  }
-field_type: string
+settings:
+  allowed_formats:
+    basic_html: basic_html
+    bold_html: bold_html
+    restricted_html: restricted_html
+    full_html: full_html
+    plain_text: plain_text
+field_type: text_long
