--- a/deploy/var/drupal-config/sync/field.field.paragraph.slideheromain.field_heading.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.slideheromain.field_heading.yml
@@ -1,10 +1,12 @@
-uuid: 05d32ed4-0c99-44de-8dbe-b6f03e39956f
+uuid: 7947540c-4063-4c35-9f89-48bb819e0a42
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.paragraph.field_heading
     - paragraphs.paragraphs_type.slideheromain
+  module:
+    - text
 id: paragraph.slideheromain.field_heading
 field_name: field_heading
 entity_type: paragraph
@@ -15,5 +17,11 @@ required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
-settings: {  }
-field_type: string
+settings:
+  allowed_formats:
+    basic_html: basic_html
+    bold_html: bold_html
+    restricted_html: restricted_html
+    full_html: full_html
+    plain_text: plain_text
+field_type: text_long
