--- a/deploy/var/drupal-config/sync/field.field.paragraph.step.field_heading.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.step.field_heading.yml
@@ -1,10 +1,12 @@
-uuid: f4d38950-b311-4037-a3a3-14af7ba79793
+uuid: 5cd02ccb-29ce-4b3d-a44a-50f6f371b0a1
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.paragraph.field_heading
     - paragraphs.paragraphs_type.step
+  module:
+    - text
 id: paragraph.step.field_heading
 field_name: field_heading
 entity_type: paragraph
@@ -15,5 +17,11 @@ required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
-settings: {  }
-field_type: string
+settings:
+  allowed_formats:
+    basic_html: basic_html
+    bold_html: bold_html
+    restricted_html: restricted_html
+    full_html: full_html
+    plain_text: plain_text
+field_type: text_long
