--- a/deploy/var/drupal-config/sync/field.field.paragraph.stepmap.field_heading.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.stepmap.field_heading.yml
@@ -1,10 +1,12 @@
-uuid: a06c8ee2-025a-4631-ab78-bd9ef07163b3
+uuid: f5c4c82f-cb40-4a17-aee1-8dcaded6b49e
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.paragraph.field_heading
     - paragraphs.paragraphs_type.stepmap
+  module:
+    - text
 id: paragraph.stepmap.field_heading
 field_name: field_heading
 entity_type: paragraph
@@ -15,5 +17,11 @@ required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
-settings: {  }
-field_type: string
+settings:
+  allowed_formats:
+    basic_html: basic_html
+    bold_html: bold_html
+    restricted_html: restricted_html
+    full_html: full_html
+    plain_text: plain_text
+field_type: text_long
