--- a/deploy/var/drupal-config/sync/field.field.paragraph.steppurchase.field_heading.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.steppurchase.field_heading.yml
@@ -1,10 +1,12 @@
-uuid: 8f4c808f-54b9-42b9-b912-8968672f6173
+uuid: 5e67981a-e647-4913-a6b7-339a5eb0d259
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.paragraph.field_heading
     - paragraphs.paragraphs_type.steppurchase
+  module:
+    - text
 id: paragraph.steppurchase.field_heading
 field_name: field_heading
 entity_type: paragraph
@@ -15,5 +17,11 @@ required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
-settings: {  }
-field_type: string
+settings:
+  allowed_formats:
+    basic_html: basic_html
+    bold_html: bold_html
+    restricted_html: restricted_html
+    full_html: full_html
+    plain_text: plain_text
+field_type: text_long
