--- a/deploy/var/drupal-config/sync/field.field.paragraph.stories.field_heading.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.stories.field_heading.yml
@@ -1,10 +1,12 @@
-uuid: 2b8272b2-b2bc-4e9e-808f-269053c7561c
+uuid: 720fd62f-3c0d-43b2-9fd1-3db4a33868e3
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.paragraph.field_heading
     - paragraphs.paragraphs_type.stories
+  module:
+    - text
 id: paragraph.stories.field_heading
 field_name: field_heading
 entity_type: paragraph
@@ -15,5 +17,11 @@ required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
-settings: {  }
-field_type: string
+settings:
+  allowed_formats:
+    basic_html: basic_html
+    bold_html: bold_html
+    restricted_html: restricted_html
+    full_html: full_html
+    plain_text: plain_text
+field_type: text_long
