--- a/deploy/var/drupal-config/sync/field.field.paragraph.blockmapsecondary.field_heading.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.blockmapsecondary.field_heading.yml
@@ -1,4 +1,4 @@
-uuid: a268fa17-90f5-4e7a-95c1-5ec052ce9b77
+uuid: 0bb91619-1c90-4a81-a17f-e6a7fadf9034
 langcode: en
 status: true
 dependencies:
@@ -19,9 +19,9 @@ default_value: {  }
 default_value_callback: ''
 settings:
   allowed_formats:
-    basic_html: basic_html
     bold_html: bold_html
-    restricted_html: restricted_html
-    full_html: full_html
-    plain_text: plain_text
+    basic_html: '0'
+    restricted_html: '0'
+    full_html: '0'
+    plain_text: '0'
 field_type: text_long
