--- a/deploy/var/drupal-config/sync/field.field.paragraph.blocksmallinfo.field_heading.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.blocksmallinfo.field_heading.yml
@@ -1,4 +1,4 @@
-uuid: b3875664-5016-402a-a1a8-5a35b53a5f5c
+uuid: 2bf12b5b-12f7-4ead-93a2-0b6ff8c7659b
 langcode: en
 status: true
 dependencies:
@@ -19,9 +19,9 @@ default_value: {  }
 default_value_callback: ''
 settings:
   allowed_formats:
-    basic_html: basic_html
     bold_html: bold_html
-    restricted_html: restricted_html
-    full_html: full_html
-    plain_text: plain_text
+    basic_html: '0'
+    restricted_html: '0'
+    full_html: '0'
+    plain_text: '0'
 field_type: text_long
