--- a/deploy/var/drupal-config/sync/field.field.paragraph.blockherosecondary.field_heading.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.blockherosecondary.field_heading.yml
@@ -1,4 +1,4 @@
-uuid: 593b7b70-b642-4160-9be3-ce30212fb5ed
+uuid: eafbc6d4-7fba-4357-903d-866d6ed58096
 langcode: en
 status: true
 dependencies:
@@ -13,10 +13,15 @@ entity_type: paragraph
 bundle: blockherosecondary
 label: Heading
 description: ''
-required: false
-translatable: false
+required: true
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
-  allowed_formats: {  }
+  allowed_formats:
+    bold_html: bold_html
+    basic_html: '0'
+    restricted_html: '0'
+    full_html: '0'
+    plain_text: '0'
 field_type: text_long
