--- a/deploy/var/drupal-config/sync/field.field.paragraph.blockimagewithcontent.field_heading.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.blockimagewithcontent.field_heading.yml
@@ -1,4 +1,4 @@
-uuid: 8872d6fa-34cf-4b99-8560-b3523da51be5
+uuid: a75513c8-d963-4ea7-acd0-5d6acf3b2c1c
 langcode: en
 status: true
 dependencies:
@@ -19,9 +19,9 @@ default_value: {  }
 default_value_callback: ''
 settings:
   allowed_formats:
-    basic_html: basic_html
     bold_html: bold_html
-    restricted_html: restricted_html
-    full_html: full_html
-    plain_text: plain_text
+    basic_html: '0'
+    restricted_html: '0'
+    full_html: '0'
+    plain_text: '0'
 field_type: text_long
