--- a/deploy/var/drupal-config/sync/field.field.paragraph.blocklatest.field_heading.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.blocklatest.field_heading.yml
@@ -1,4 +1,4 @@
-uuid: 644c36fd-fef6-437b-9d63-4ad688f9c25a
+uuid: 91e2128f-f7ab-47c4-a4f2-fddc8883c95d
 langcode: en
 status: true
 dependencies:
@@ -19,9 +19,9 @@ default_value: {  }
 default_value_callback: ''
 settings:
   allowed_formats:
-    basic_html: basic_html
     bold_html: bold_html
-    restricted_html: restricted_html
-    full_html: full_html
-    plain_text: plain_text
+    basic_html: '0'
+    restricted_html: '0'
+    full_html: '0'
+    plain_text: '0'
 field_type: text_long
