--- a/deploy/var/drupal-config/sync/field.field.paragraph.personas.field_heading.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.personas.field_heading.yml
@@ -1,4 +1,4 @@
-uuid: c632f239-4b8d-47cf-926a-b8ab72bec9cb
+uuid: b450b440-79d0-4513-8081-42e44a7e3150
 langcode: en
 status: true
 dependencies:
@@ -19,9 +19,9 @@ default_value: {  }
 default_value_callback: ''
 settings:
   allowed_formats:
-    basic_html: basic_html
     bold_html: bold_html
-    restricted_html: restricted_html
-    full_html: full_html
-    plain_text: plain_text
+    basic_html: '0'
+    restricted_html: '0'
+    full_html: '0'
+    plain_text: '0'
 field_type: text_long
