--- a/deploy/var/drupal-config/sync/field.field.paragraph.program.field_heading.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.program.field_heading.yml
@@ -1,4 +1,4 @@
-uuid: 521f0fde-9488-4d15-9cf1-2411779eefb5
+uuid: ba38e436-be64-4f8b-900a-ff300eed9d20
 langcode: en
 status: true
 dependencies:
@@ -19,9 +19,9 @@ default_value: {  }
 default_value_callback: ''
 settings:
   allowed_formats:
-    basic_html: basic_html
     bold_html: bold_html
-    restricted_html: restricted_html
-    full_html: full_html
-    plain_text: plain_text
+    basic_html: '0'
+    restricted_html: '0'
+    full_html: '0'
+    plain_text: '0'
 field_type: text_long
