--- a/deploy/var/drupal-config/sync/field.field.paragraph.slideheromain.field_heading.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.slideheromain.field_heading.yml
@@ -1,4 +1,4 @@
-uuid: 7947540c-4063-4c35-9f89-48bb819e0a42
+uuid: 3f47b680-fc45-47af-b635-bab584d1170b
 langcode: en
 status: true
 dependencies:
@@ -19,9 +19,9 @@ default_value: {  }
 default_value_callback: ''
 settings:
   allowed_formats:
-    basic_html: basic_html
     bold_html: bold_html
-    restricted_html: restricted_html
-    full_html: full_html
-    plain_text: plain_text
+    basic_html: '0'
+    restricted_html: '0'
+    full_html: '0'
+    plain_text: '0'
 field_type: text_long
