--- a/deploy/var/drupal-config/sync/field.field.paragraph.statistic.field_heading.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.statistic.field_heading.yml
@@ -1,4 +1,4 @@
-uuid: 980814c7-ee95-4f83-a08f-04bf59f56573
+uuid: d8133729-5222-4603-b95c-7a65fadea914
 langcode: en
 status: true
 dependencies:
@@ -19,9 +19,9 @@ default_value: {  }
 default_value_callback: ''
 settings:
   allowed_formats:
-    basic_html: basic_html
     bold_html: bold_html
-    restricted_html: restricted_html
-    full_html: full_html
-    plain_text: plain_text
+    basic_html: '0'
+    restricted_html: '0'
+    full_html: '0'
+    plain_text: '0'
 field_type: text_long
