--- a/deploy/var/drupal-config/sync/field.field.paragraph.stepmap.field_heading.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.stepmap.field_heading.yml
@@ -1,4 +1,4 @@
-uuid: f5c4c82f-cb40-4a17-aee1-8dcaded6b49e
+uuid: ec35ee8e-1990-4206-a23d-930c65739728
 langcode: en
 status: true
 dependencies:
@@ -19,9 +19,9 @@ default_value: {  }
 default_value_callback: ''
 settings:
   allowed_formats:
-    basic_html: basic_html
     bold_html: bold_html
-    restricted_html: restricted_html
-    full_html: full_html
-    plain_text: plain_text
+    basic_html: '0'
+    restricted_html: '0'
+    full_html: '0'
+    plain_text: '0'
 field_type: text_long
