--- a/deploy/var/drupal-config/sync/field.field.paragraph.stories.field_heading.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.stories.field_heading.yml
@@ -1,4 +1,4 @@
-uuid: 720fd62f-3c0d-43b2-9fd1-3db4a33868e3
+uuid: 2f1924c4-dfdd-4703-9b31-e15b8d4477a1
 langcode: en
 status: true
 dependencies:
@@ -14,14 +14,14 @@ bundle: stories
 label: Heading
 description: ''
 required: true
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
   allowed_formats:
-    basic_html: basic_html
     bold_html: bold_html
-    restricted_html: restricted_html
-    full_html: full_html
-    plain_text: plain_text
+    basic_html: '0'
+    restricted_html: '0'
+    full_html: '0'
+    plain_text: '0'
 field_type: text_long
