--- a/deploy/var/drupal-config/sync/field.storage.paragraph.field_heading.yml
+++ b/deploy/var/drupal-config/sync/field.storage.paragraph.field_heading.yml
@@ -1,18 +1,16 @@
-uuid: ba0754d1-972e-455f-a3d4-a0a7e13de2ac
+uuid: 7308231a-2849-44b8-937f-16da5e61a78d
 langcode: en
 status: true
 dependencies:
   module:
     - paragraphs
+    - text
 id: paragraph.field_heading
 field_name: field_heading
 entity_type: paragraph
-type: string
-settings:
-  max_length: 255
-  is_ascii: false
-  case_sensitive: false
-module: core
+type: text_long
+settings: {  }
+module: text
 locked: false
 cardinality: 1
 translatable: true
