--- a/deploy/var/drupal-config/sync/user.role.authenticated.yml
+++ b/deploy/var/drupal-config/sync/user.role.authenticated.yml
@@ -27,3 +27,4 @@ permissions:
   - 'restful post spectrum_rest_contact_v1'
   - 'restful get spin_rest_view_counter_v1'
   - 'restful post spectrum_rest_view_counter_v1'
+  - 'restful get spectrum_rest_view_counter_v1'
