removed locale + added to ignore.

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ deploy/htdocs/profiles/contrib
 deploy/htdocs/sites/default/files
 drush/contrib
 /composer.lock
+/deploy/var/drupal-settings/example.settings.local.php
