--- a/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.link.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.link.default.yml
@@ -3,18 +3,26 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.link.field_file
     - field.field.paragraph.link.field_label
     - field.field.paragraph.link.field_target
     - field.field.paragraph.link.field_title
     - field.field.paragraph.link.field_type
     - paragraphs.paragraphs_type.link
   module:
+    - file
     - link
 id: paragraph.link.default
 targetEntityType: paragraph
 bundle: link
 mode: default
 content:
+  field_file:
+    weight: 4
+    settings:
+      progress_indicator: throbber
+    third_party_settings: {  }
+    type: file_generic
   field_label:
     weight: 0
     settings:
