Ticket #423: Added block video with CTA

--- a/deploy/var/drupal-config/sync/field.field.node.page.field_blocks.yml
+++ b/deploy/var/drupal-config/sync/field.field.node.page.field_blocks.yml
@@ -6,7 +6,7 @@ dependencies:
     - field.storage.node.field_blocks
     - node.type.page
     - paragraphs.paragraphs_type.block_map_tertiary
-    - paragraphs.paragraphs_type.block_pdf
+    - paragraphs.paragraphs_type.block_video_with_call_to_actions
     - paragraphs.paragraphs_type.blockarticleteaser
     - paragraphs.paragraphs_type.blockaudiofragment
     - paragraphs.paragraphs_type.blockblogpost
@@ -74,8 +74,8 @@ settings:
       blockpathtopurchase: blockpathtopurchase
       blockprogrammodule: blockprogrammodule
       blockquote: blockquote
-      blockquotesecondary: blockquotesecondary
       blockinfo: blockinfo
+      blockquotesecondary: blockquotesecondary
       blocksmallheading: blocksmallheading
       blocksmallimage: blocksmallimage
       blocksmallinfo: blocksmallinfo
@@ -83,7 +83,7 @@ settings:
       blocktext: blocktext
       blockfiltercontent: blockfiltercontent
       block_map_tertiary: block_map_tertiary
-      block_pdf: block_pdf
+      block_video_with_call_to_actions: block_video_with_call_to_actions
       blockpersonaselector: blockpersonaselector
     target_bundles_drag_drop:
       blockhowtoadvertise:
@@ -173,10 +173,10 @@ settings:
       blockquote:
         enabled: true
         weight: 35
-      blockquotesecondary:
+      blockinfo:
         enabled: true
         weight: 36
-      blockinfo:
+      blockquotesecondary:
         enabled: true
         weight: 36
       blocksmallheading:
@@ -209,9 +209,9 @@ settings:
       block_map_tertiary:
         enabled: true
         weight: 48
-      block_pdf:
+      block_video_with_call_to_actions:
         enabled: true
-        weight: 50
+        weight: 51
       blockpersonaselector:
         enabled: true
         weight: 54
@@ -221,11 +221,14 @@ settings:
       networkoverviewitem:
         weight: 82
         enabled: false
+      steppurchase:
+        weight: 84
+        enabled: false
       program:
         weight: 84
         enabled: false
-      steppurchase:
-        weight: 84
+      map_tertiary_data:
+        weight: 85
         enabled: false
       stepmap:
         weight: 91
