Updated config sync files

--- a/deploy/var/drupal-config/sync/core.entity_view_display.node.page.teaser.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.node.page.teaser.yml
@@ -18,3 +18,6 @@ content:
     weight: 101
 hidden:
   field_blocks: true
+  field_header_theme: true
+  field_hide_contact_button: true
+  field_metatags: true
