Phase 2: Added event subscriber to clean empty arrays from JSON response

--- a/deploy/htdocs/modules/custom/spectrum_rest/spectrum_rest.services.yml
+++ b/deploy/htdocs/modules/custom/spectrum_rest/spectrum_rest.services.yml
@@ -3,3 +3,8 @@ services:
     class: Drupal\spectrum_rest\Normalizer\SpectrumContactDenormalizer
     tags:
       - { name: normalizer }
+  spectrum_rest.io_event_subscriber:
+    class: Drupal\spectrum_rest\EventSubscriber\IOEventSubscriber
+    arguments: [ '@mm_rest.request_matcher' ]
+    tags:
+      - { name: event_subscriber }
